--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
     <title>Ai Music Player😨😱</title>
 </head>
 <body background="background.png">
@@ -25,4 +26,5 @@
         <br>
     </center>
 </body>
+<script src="main.js"></script>
 </html>
