--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
         <h1 class="btn btn-warning heading">
             Ai Music Player😨😱
             <br>
-            <span class="note">Get your left wrist in front of the webcam to play Heaven, and get your<br>
-            right wrist in front of the webcam to play Drift</span>
+            <span class="note">Get your left wrist in front of the webcam to play Alan Walker Type Beat 2, and get your<br>
+            right wrist in front of the webcam to play Heaven</span>
         </h1>
         <br>
         <br>
         <br>
         <h2 class="btn btn-warning" id="song_name">Song Name:</h2>
         <br>
+        <div class="footer">
+            <p>footer</p>
+        </div>
     </center>
 </body>
 <script src="main.js"></script>
